changes in file

--- a/portfolio/javascript/index.html
+++ b/portfolio/javascript/index.html
@@ -59,7 +59,7 @@
 
     <!-- Video Background -->
   <video autoplay muted loop playsinline class="bg-video">
-    <source src="../video/intro_sec_video.mp4" type="video/mp4" alt="Your browser does not support the video tag.">
+    <source src="video/intro_sec_video.mp4" type="video/mp4" alt="Your browser does not support the video tag.">
   </video>
     <!-- Profile Image -->
   <div class="container text-white position-relative">
