changes in image path

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -96,7 +96,7 @@
       
       <!-- Profile Image -->
       <div class="col-md-5 text-center mb-4 mb-md-0" data-aos="fade-right">
-        <img src="../images/profile.jpg" alt="Gulzar Shaikh" class="about-img">
+        <img src="images/profile.jpg" alt="Gulzar Shaikh" class="about-img">
       </div>
 
       <!-- About Content -->
@@ -136,7 +136,7 @@
       <div class="col-md-4" data-aos="fade-up">
         <div class="project-card">
           <div class="project-img">
-            <img src="../images/todo.png" alt="Todo App">
+            <img src="images/todo.png" alt="Todo App">
           </div>
           <div class="project-content">
             <h5 class="project-title">Todo App</h5>
@@ -152,7 +152,7 @@
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
         <div class="project-card">
           <div class="project-img">
-            <img src="../images/personal-portfolio.png" alt="Portfolio">
+            <img src="images/personal-portfolio.png" alt="Portfolio">
           </div>
           <div class="project-content">
             <h5 class="project-title">Portfolio</h5>
@@ -168,7 +168,7 @@
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
         <div class="project-card">
           <div class="project-img">
-            <img src="../images/blog.png" alt="Blog App">
+            <img src="images/blog.png" alt="Blog App">
           </div>
           <div class="project-content">
             <h5 class="project-title">Blog Application</h5>
@@ -184,7 +184,7 @@
        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
         <div class="project-card">
           <div class="project-img">
-            <img src="../images/blog.png" alt="Blog App">
+            <img src="images/blog.png" alt="Blog App">
           </div>
           <div class="project-content">
             <h5 class="project-title">Weather Application</h5>
@@ -200,7 +200,7 @@
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
         <div class="project-card">
           <div class="project-img">
-            <img src="../images/blog.png" alt="Blog App">
+            <img src="images/blog.png" alt="Blog App">
           </div>
           <div class="project-content">
             <h5 class="project-title">Ecommerce App</h5>
@@ -216,7 +216,7 @@
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
         <div class="project-card">
           <div class="project-img">
-            <img src="../images/blog.png" alt="Blog App">
+            <img src="images/blog.png" alt="Blog App">
           </div>
           <div class="project-content">
             <h5 class="project-title">Site Clone App</h5>
@@ -289,7 +289,7 @@
           <div class="card experience-card border-0 shadow">
             <div class="card-body d-flex align-items-center">
               <div class="company-logo me-3">
-                <img src="../images/symphony.jpg" alt="Royal Symphony Logo">
+                <img src="images/symphony.jpg" alt="Royal Symphony Logo">
               </div>
               <div>
                 <h4 class="mb-1">Hotel Manager</h4>
@@ -308,7 +308,7 @@
           <div class="card experience-card border-0 shadow">
             <div class="card-body d-flex align-items-center">
               <div class="company-logo me-3">
-                <img src="../images/school.png" alt="School Logo">
+                <img src="images/school.png" alt="School Logo">
               </div>
               <div>
                 <h4 class="mb-1">Subject Matter Expert</h4>
@@ -327,7 +327,7 @@
           <div class="card experience-card border-0 shadow">
             <div class="card-body d-flex align-items-center">
               <div class="company-logo me-3">
-                <img src="../images/jd.jpeg" alt="JD Associate Logo">
+                <img src="images/jd.jpeg" alt="JD Associate Logo">
               </div>
               <div>
                 <h4 class="mb-1">Tally Caller</h4>
@@ -352,7 +352,7 @@
       <!-- HTML -->
       <div class="col-6 col-md-4 text-center" data-aos="zoom-in">
         <div class="position-relative mt-4">
-          <img src="../images/html.png" 
+          <img src="images/html.png" 
                alt="HTML Logo" 
                class="skill-logo position-absolute start-50 translate-middle-x" 
                data-bs-toggle="tooltip" data-bs-placement="top" title="HTML: 90%">
@@ -366,7 +366,7 @@
       <!-- CSS -->
       <div class="col-6 col-md-4 text-center" data-aos="zoom-in">
         <div class="position-relative mt-4">
-          <img src="../images/css.png" 
+          <img src="images/css.png" 
                alt="CSS Logo" 
                class="skill-logo position-absolute start-50 translate-middle-x" 
                data-bs-toggle="tooltip" data-bs-placement="top" title="CSS: 90%">
@@ -380,7 +380,7 @@
       <!-- JavaScript -->
        <div class="col-6 col-md-4 text-center" data-aos="zoom-in">
         <div class="position-relative mt-4">
-          <img src="../images/js.png" 
+          <img src="images/js.png" 
                alt="JavaScript Logo" 
                class="skill-logo position-absolute start-50 translate-middle-x" 
                data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript: 85%">
@@ -394,7 +394,7 @@
       <!-- React -->
         <div class="col-6 col-md-4 text-center" data-aos="zoom-in">
         <div class="position-relative mt-4">
-          <img src="../images/react.png" 
+          <img src="images/react.png" 
                alt="React Logo" 
                class="skill-logo position-absolute start-50 translate-middle-x" 
                data-bs-toggle="tooltip" data-bs-placement="top" title="React: 80%">
@@ -529,7 +529,7 @@
     <!-- Certificate Cards -->
       <div class="col-md-4" data-aos="fade-up">
         <div class="card certificate-card shadow border-0 text-center" data-bs-toggle="modal" data-bs-target="#certCarouselModal" data-bs-slide-to="0">
-          <img src="../images/profile.jpg" class="card-img-top" alt="Google UX Certificate">
+          <img src="images/profile.jpg" class="card-img-top" alt="Google UX Certificate">
           <div class="card-body">
             <i class="fa-solid fa-award fa-2xl mb-3" style="color:#e70d2e;"></i>
             <h5 class="card-title">UI/UX Design Certificate</h5>
@@ -541,7 +541,7 @@
 
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
         <div class="card certificate-card shadow border-0 text-center" data-bs-toggle="modal" data-bs-target="#certCarouselModal" data-bs-slide-to="1">
-          <img src="../images/profile.jpg" class="card-img-top" alt="Hackathon Winner">
+          <img src="images/profile.jpg" class="card-img-top" alt="Hackathon Winner">
           <div class="card-body">
             <i class="fa-solid fa-trophy fa-2xl mb-3" style="color:#0552d6;"></i>
             <h5 class="card-title">Hackathon Winner</h5>
@@ -553,7 +553,7 @@
 
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
         <div class="card certificate-card shadow border-0 text-center" data-bs-toggle="modal" data-bs-target="#certCarouselModal" data-bs-slide-to="2">
-          <img src="../images/profile.jpg" class="card-img-top" alt="AWS Certificate">
+          <img src="images/profile.jpg" class="card-img-top" alt="AWS Certificate">
           <div class="card-body">
             <i class="fa-solid fa-award fa-2xl mb-3" style="color:#e70d2e;"></i>
             <h5 class="card-title">AWS Cloud Practitioner</h5>
@@ -576,22 +576,22 @@
         <div class="carousel-inner text-center">
 
           <div class="carousel-item active">
-            <img src="../images/profile.jpg" class="img-fluid rounded mb-3" alt="UI/UX Certificate">
-            <a href="../images/profile.jpg" download class="btn btn-primary mt-2">
+            <img src="images/profile.jpg" class="img-fluid rounded mb-3" alt="UI/UX Certificate">
+            <a href="images/profile.jpg" download class="btn btn-primary mt-2">
               <i class="fa-solid fa-download"></i> Download Certificate
             </a>
           </div>
 
           <div class="carousel-item">
-            <img src="../images/profile.jpg" class="img-fluid rounded mb-3" alt="Hackathon Winner">
-            <a href="../images/profile.jpg" download class="btn btn-primary mt-2">
+            <img src="images/profile.jpg" class="img-fluid rounded mb-3" alt="Hackathon Winner">
+            <a href="images/profile.jpg" download class="btn btn-primary mt-2">
               <i class="fa-solid fa-download"></i> Download Certificate
             </a>
           </div>
 
           <div class="carousel-item">
-            <img src="../images/profile.jpg" class="img-fluid rounded mb-3" alt="AWS Certificate">
-            <a href="../images/profile.jpg" download class="btn btn-primary mt-2">
+            <img src="images/profile.jpg" class="img-fluid rounded mb-3" alt="AWS Certificate">
+            <a href="images/profile.jpg" download class="btn btn-primary mt-2">
               <i class="fa-solid fa-download"></i> Download Certificate
             </a>
           </div>
